@@ -6,6 +6,7 @@ File Name: CHANGES
 - Handling errors when VMB aggreation does not succeed. 
 - When AMG setup fail on the finest level, use coarse solver.
 - Check max level and make sure allocate at least one level.
+- Add a name for G0 points (for pairwise aggregation).
 - Uniformize debug output format.
 - Change adaptive GMRES (various versions) restart number.
 - Remove unused *_omp() functions.
